HIVE-9425 - Add jar/file doesn't work with yarn-cluster mode [Spark Branch] (Rui via Brock)
git-svn-id: https://svn.apache.org/repos/asf/hive/branches/spark@1659840 13f79535-47bb-0310-9956-ffa450edef68